# JPOPRO

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
data/: data_station.json  single_sensor.json  specific_place.json
docs/: Doxyfile
docs/html/: _e_g_l_2egl_8h_source.html  _g_l_2glext_8h_source.html  _g_l_e_s2_2gl2platform_8h_source.html  _g_l_e_s_21_80_2gl_8h_source.html  _g_l_e_s_2egl_8h_source.html  _g_l_e_s_2gl_8h_source.html  _g_l_e_s_2glext_8h_source.html  _g_l_s_c2_2gl2platform_8h_source.html  _g_l_s_c_21_80_2gl_8h_source.html  _g_l_s_c_21_80_81_2gl_8h_source.html  _searching_8cpp.html  _searching_8cpp.js  abi__macros_8hpp_source.html  adl__serializer_8hpp_source.html  annotated.html  annotated_dup.js  api_8cpp.html  api_8cpp.js  api_8h_source.html  args_8h_source.html  base_8h_source.html  begin_8hpp_source.html  binary__reader_8hpp_source.html  binary__writer_8hpp_source.html  build_2_c_make_files_2_show_includes_2foo_8h_source.html  byte__container__with__subtype_8hpp_source.html  chrono_8h_source.html  class_gui-members.html  class_gui.html  class_gui.js  classbasic__appender-members.html  classbasic__appender.html  classbasic__cstring__view-members.html  classbasic__cstring__view.html  classbasic__format__arg-members.html  classbasic__format__arg.html  classbasic__format__arg.js  classbasic__format__arg_1_1handle-members.html  classbasic__format__arg_1_1handle.html  classbasic__format__args-members.html  (+2015 more)
header/: api.h  gui.h  searching.h
src/: Searching.cpp  api.cpp  gui.cpp  main.cpp
tests/: test.cpp
(+1220 files in other folders)
